# MFF_BC

./: README.md
ndbi040_modern_database_systems/: MDS_speech.docx  README.md  sampleData.txt  sample_data.ods  sample_data.xml
ndbi040_modern_database_systems/an/: an1.txt  an10.txt  an11.txt  an12.txt  an13.txt  an14.txt  an2.txt  an3.txt  an4.txt  an5.txt  an6.txt  an7.txt  an8.txt  an9.txt
ndbi040_modern_database_systems/credits/: credits1.txt  credits10.txt  credits11.txt  credits12.txt  credits14.txt  credits15.txt  credits16.txt  credits17.txt  credits18.txt  credits2.txt  credits3.txt  credits4.txt  credits5.txt  credits6.txt  credits7.txt  credits8.txt  credits9.txt
nprg035_programming_in_csharp/: MoreThanOneEmptyLineBetweenParagraphs.txt  NotEqualNumberOfItemsInARowIn.txt  README.md  WhiteCharsOnTheEOL.txt  generator.py
nprg035_programming_in_csharp/BlockAlignment/: BigTextIn.txt  BlockAlignment.csproj  BlockAlignment.sln  EmptyLinesAfterLastWordIn.txt  Program.cs  SeveralParagraphsIn.txt
nprg035_programming_in_csharp/BlockAlignment_UnitTests/: BlockAlignmentTests.cs  BlockAlignment_UnitTests.csproj  ConsoleOutputHandler.cs  FileComparator.cs  GlobalUsings.cs
nprg035_programming_in_csharp/CountOrNotCount/: Program.cs
nprg035_programming_in_csharp/ExamPrep/: ExamPrep.sln  Program.cs  (+5 more)
nprg042_programming_in_parallel_environment/: README.md
nprg043_recommended_programming_practices/project/gtest/: CMakeLists.txt  tests.cpp  tests29.cpp
nswi098_principles_of_compilers/: CMakeConf.cmake
nswi150_virtualization_and_cloud_computing/: What Is a Storage Area Network_ SAN Explained.html  What is RAID_.html  resources.md
nswi154_software_development_tools/: .gitignore
nswi200_operating_systems/: Makefile  README-m02.md  README-m03.md  README-m04.md  README-m05.md  README-m06.md  README.md  configure.py  msim.conf
(+597 files in other folders)
